# ir_calculator

./: .prettierrc.json  README.md  bun.lockb  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: code-quality.yml  frontend.yml  tauri.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Calculator.vue  Notes.vue  ThemeToggle.vue
src/constants/: themes.ts
